maven-debian-helper (0.2) unstable; urgency=low

  UNRELEASED
  * Refactoring.
  * Add sysinstall and sysuninstall goals.

 -- Torsten Werner <twerner@debian.org>  Fri, 19 Dec 2008 18:04:30 +0100

maven-debian-helper (0.1) unstable; urgency=low

  * Initial release. (Closes: #508511)

 -- Torsten Werner <twerner@debian.org>  Thu, 11 Dec 2008 20:06:35 +0100