@@ -1,0 +1,11 @@
+package org.debian.maven.plugin;
+
+/**
+ * resolves compile dependencies
+ *
+ * @goal resolve-compile
+ * @requiresDependencyResolution compile
+ */
+public class ResolveCompileMojo extends ResolveNoneMojo
+{
+}
