@@ -1,0 +1,11 @@
+package org.debian.maven.plugin;
+
+/**
+ * resolves runtime dependencies
+ *
+ * @goal resolve-runtime
+ * @requiresDependencyResolution runtime
+ */
+public class ResolveRuntimeMojo extends ResolveNoneMojo
+{
+}
