@@ -1,0 +1,11 @@
+package org.debian.maven.plugin;
+
+/**
+ * resolves test dependencies
+ *
+ * @goal resolve-test
+ * @requiresDependencyResolution test
+ */
+public class ResolveTestMojo extends ResolveNoneMojo
+{
+}
